force-app/main/default/objects/VTPX_User_Datatable_Products__mdt/VTPX_User_Datatable_Products__mdt.object-meta.xml
<CustomObject>
    <description>Used for hiding certain products in the flow &quot;Voice Flow - Users - Basics&quot;</description>
    <label>VTPX User Datatable Products</label>
    <pluralLabel>VTPX User Datatable Products</pluralLabel>
</CustomObject>