force-app/main/default/objects/VTPX_User_Datatable_Products__mdt/fields/Hide__c.field-meta.xml
<CustomField>
    <fullName>Hide__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hide?</label>
    <type>Checkbox</type>
</CustomField>