force-app/main/default/objects/VTPX_User_Datatable_Products__mdt/fields/Telia_Product_ID__c.field-meta.xml
<CustomField>
    <fullName>Telia_Product_ID__c</fullName>
    <label>Telia Product ID</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>