force-app/main/default/objects/VTPX_User_Datatable_Products__mdt/listViews/All_better.listView-meta.xml
<ListView>
    <fullName>All_better</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Product_Code__c</columns>
    <columns>Telia_Product_ID__c</columns>
    <columns>Hide__c</columns>
    <filterScope>Everything</filterScope>
    <label>All (better)</label>
    <language>en_US</language>
</ListView>